@@ -57,6 +57,10 @@ Note that `mvn install` is required to build and run the examples.
 
     mvn clean
 
+**If facing errors like ` module java.base does not "opens java.nio" to unnamed module`**
+
+    export JAVA_TOOL_OPTIONS="--add-opens=java.base/java.nio=ALL-UNNAMED"
+
 ### Create a configuration file
 
 In order to run the examples you will need to create an SDK config file.
@@ -86,7 +90,7 @@ In order to use the `rai-sdk-java`, you need add this dependency to your project
     <dependency>
         <groupId>com.relationalai</groupId>
         <artifactId>rai-sdk</artifactId>
-        <version>0.4.0-alpha</version>
+        <version>0.4.1-alpha</version>
     </dependency>
 
 You need also to point maven to the SDK GitHub packages repository in the project's POM:
